--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Pie Recipe</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles.css">
   </head>
+  
   <body>
+    <header>
+      <div class="container">
+    <img src="images/apple-pie.jpg" width="500px" height="300px" alt="apple-pie">
+    <h1>Apple pie</h1>
+    </div>
+  </header>
+
+      <h3>This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
+        be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
+        favorites as well!</h3>
+
+        <div>
+          <p>1:30m</p>
+        </div>
+        <div>
+        <p>8 serving</p>
+      </div>
+
+      <div>
+        <p>512 cals</p>
+      </div>
+
+
     Apple Pies This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
     be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
     favorites as well! Ingredients 1 recipe pastry for a 9 inch double crust pie 1/2 cup unsalted butter 3 tablespoons
